style: possible fix for prod issue with wrong font weight on initial load

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,9 +34,6 @@ body {
 body {
 	color: rgb(var(--foreground-rgb));
 	background: rgb(var(--background-rgb));
-	font-family: "Roboto Serif", serif;
-	font-weight: 200;
-	font-size: 15px;
 }
 
 a {
